crates/macro-tools/tests/ui/deref/fail/unit_struct.rs
use picea_macro_tools::Deref;

#[derive(Deref)]
struct Wrapper;

fn main() {}
